..F....PS. [ZBX-10076] fixed text information containing non-ASCII characters being saved incorrectly to IBM DB2 database in case of system locale misconfiguration (gleb, Oleg)
..F....... [ZBX-9989] optimized SQL queries for graphs building (Gunars, Sasha)

--------------------------------------------------------------------------------
Changes for 3.0.4rc1

New features:

Bug fixes:
..F....... [ZBXNEXT-3263] moved image type selection to top in administration->general->images (Cemeris)
..F....... [ZBXNEXT-3263] added "No data found." message in administration->general->images (Cemeris)
..F....... [ZBX-10731] fixed textarea visibility in monitoring->maps properties (Cemeris)
........S. [ZBX-10723] forced quoting of item key parameter if macro resolution resulted in unquoted parameter with leading spaces (gleb)
..F....... [ZBX-10825] reverted table header capitalization. fixed calendar header (asaveljevs, Pavel)
.......PS. [ZBX-8096] allowed "noSuchName" to be returned for SNMPv2 and SNMPv3 (asaveljevs)
..F....... [ZBX-10794] fixed saving of "Show text as HTML" checkbox in Monitoring->Screens (Cemeris)
..F....... [ZBX-10504] decreased padding and margins in tables and across the whole UI (Pavel)
..F....... [ZBX-10504] added compression of generated CSS files to reduce size from 99K to around 56K (asaveljevs, Pavel)
...GI..... [ZBX-10760] fixed agent, get and sender being erroneously linked against UnixODBC (gleb)
..F....... [ZBX-10647] removed disabled status for "Export to CSV" button (Ivo)
..F....... [ZBX-10679] fixed vertical scrollbar overlapping in messages (Pavel)
..F....... [ZBX-10778] fixed users online status in users.php users table (Cemeris, Gunars)
..F....... [ZBX-10605] fixed access_deny() message layout for not logged in page visitors (Cemeris)
..F....... [ZBX-10605] fixed access to popup_media for Zabbix Admin user in profile->media (Cemeris)
..F....... [ZBX-10806] fixed whitespace between elements in the IT services form (Sasha)
