@@ -26,6 +26,7 @@ Changes for 3.0.4rc1
 New features:
 
 Bug fixes:
+..F....... [ZBX-10806] fixed whitespace between elements in host, host mass update, host prototype and proxy forms (Sasha)
 ..F....... [ZBXNEXT-3263] moved image type selection to top in administration->general->images (Cemeris)
 ..F....... [ZBXNEXT-3263] added "No data found." message in administration->general->images (Cemeris)
 ..F....... [ZBX-10731] fixed textarea visibility in monitoring->maps properties (Cemeris)
